Prevent value from spilling out of wr_number

--- a/styles/inputs.css
+++ b/styles/inputs.css
@@ -165,6 +165,10 @@
     font-size: 200%;
 }
 
+.wr_number {
+    overflow: hidden;
+}
+
 .wr_number_num {
     font-size: 200%;
     float: right;
